public/css/broadcast/default/broadcast.css
@font-face {
    font-family: 'ArialMTStd-ExtraBold';
    src: url('/fonts/broadcast/default/ArialMTStd-ExtraBold.eot?#iefix') format('embedded-opentype'),
    url('/fonts/broadcast/default/ArialMTStd-ExtraBold.otf')  format('opentype'),
    url('/fonts/broadcast/default/ArialMTStd-ExtraBold.woff') format('woff'),
    url('/fonts/broadcast/default/ArialMTStd-ExtraBold.ttf')  format('truetype'),
    url('/fonts/broadcast/default/ArialMTStd-ExtraBold.svg#ArialMTStd-ExtraBold') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'ralewayregular';
    src: url('/fonts/broadcast/default/raleway-regular-webfont.eot');
    src: url('/fonts/broadcast/default/raleway-regular-webfont.eot?#iefix') format('embedded-opentype'),
    url('/fonts/broadcast/default/raleway-regular-webfont.woff2') format('woff2'),
    url('/fonts/broadcast/default/raleway-regular-webfont.woff') format('woff'),
    url('/fonts/broadcast/default/raleway-regular-webfont.ttf') format('truetype'),
    url('/fonts/broadcast/default/raleway-regular-webfont.svg#ralewayregular') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'ralewaybold';
    src: url('/fonts/broadcast/default/raleway-bold-webfont.eot');
    src: url('/fonts/broadcast/default/raleway-bold-webfont.eot?#iefix') format('embedded-opentype'),
    url('/fonts/broadcast/default/raleway-bold-webfont.woff2') format('woff2'),
    url('/fonts/broadcast/default/raleway-bold-webfont.woff') format('woff'),
    url('/fonts/broadcast/default/raleway-bold-webfont.ttf') format('truetype'),
    url('/fonts/broadcast/default/raleway-bold-webfont.svg#ralewaybold') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'ralewaysemibold';
    src: url('/fonts/broadcast/default/raleway-semibold-webfont.eot');
    src: url('/fonts/broadcast/default/raleway-semibold-webfont.eot?#iefix') format('embedded-opentype'),
    url('/fonts/broadcast/default/raleway-semibold-webfont.woff2') format('woff2'),
    url('/fonts/broadcast/default/raleway-semibold-webfont.woff') format('woff'),
    url('/fonts/broadcast/default/raleway-semibold-webfont.ttf') format('truetype'),
    url('/fonts/broadcast/default/raleway-semibold-webfont.svg#ralewaysemibold') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'ralewaymedium';
    src: url('/fonts/broadcast/default/raleway-medium-webfont.eot');
    src: url('/fonts/broadcast/default/raleway-medium-webfont.eot?#iefix') format('embedded-opentype'),
    url('/fonts/broadcast/default/raleway-medium-webfont.woff2') format('woff2'),
    url('/fonts/broadcast/default/raleway-medium-webfont.woff') format('woff'),
    url('/fonts/broadcast/default/raleway-medium-webfont.ttf') format('truetype'),
    url('/fonts/broadcast/default/raleway-medium-webfont.svg#ralewaymedium') format('svg');
    font-weight: normal;
    font-style: normal;
}

html,body {
    height: 100%!important;
}
body {
  background-color: #e9e9e8;
  font-family: 'ralewayregular';
}
.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
  font-family: 'ralewaybold';
}
h2 {
  color: #00ba8b;
  font-size: 18px;
}
h3,
.h3 {
  font-size: 16px;
  color: #356ab1;
}
h5,
.h5,
a.h5 {
  font-size: 13px;
  color: #00ba8b;
}
h2.heading,
h5.heading {
  margin: 20px 0;
}
.bold {
  font-family: 'ralewaybold';
}
#broadcast .top {
  background-color: #262a31;
  text-align: center;
  margin: auto;
  padding: 15px 0;
}
#broadcast .footer {
  background-color: #d6d7d7;
  padding: 18px 0;
  color: #333;
  font-size: 12px;
  text-align: center;
  margin-top: 0px;
}
#broadcast .broadcast .numbers.t1 {
  background-color: #44a9aa;
  color: #fff;
  -webkit-box-shadow:inset 0 0 80px 0 rgba(0,0,0,0.3);
  box-shadow:inset 0 0 80px 0 rgba(0,0,0,0.3);
}
#broadcast .broadcast .numbers.t2 {
  background-color: #657fb3;
  color: #fff;
}
#broadcast .broadcast .numbers.t3 {
  background-color: #746ca8;
  color: #fff;
}


#broadcast .qrwrap {
    background-color: #e7e7e7;
}
/*.boxed .broadcast .numbers h1 {
    font-size: 14vmin;
    font-family: 'ralewaysemibold';
    color: #fff;
    position: absolute;
    top: 50%;
    margin-top: -7vmin;
    width: 100%;
}*/
/*.bcast-big .terminal {
    font-size: 3vmin;
}*/

#broadcast .qrwrap p {
  font-size: 16px;
}
.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, 
.col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, 
.col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, 
.col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, 
.col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, 
.col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
  padding-left: 0px;
  padding-right: 0px;
}
#broadcast .qrwrap .orange {
  font-family: 'ralewaybold';
}
#broadcast .head h4 {
  font-size: 45px;
}
.container-fluid {
  padding-left: 0;
  padding-right: 0;
}
.six-nums img {
  background-color: #ff925b;
}
.six-nums .qrwrap p.nomg {
  font-size: 16px!important;
  line-height: 26px!important;
  margin-bottom: 10px;
}
.six-nums .qrwrap p.orange {
  font-size: 30px!important;
  line-height: 40px!important;
}
/*.three-nums p.terminal {
  font-size: 50px!important;
}*/
.qrcode {
  background-color: #e7e7e7;
  padding: 10px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  background-color: #ff925b;
  margin-top: 12px;
}
.three-nums .qrcode {
  margin-top: 60px!important;
}
.three-nums p.orange {
  margin-bottom: 30px!important;
  margin-top: 40px!important;
}
.three-nums .qrwrap p.orange {
  font-size: 60px!important;
}
.three-nums .qrwrap p {
  font-size: 30px!important;
}


.boxed .body.broadcast {
  position: relative;
  overflow: hidden;
}
.bcast-details {
  display: none;
  position: absolute;
  top: 0px;
  left: 0;
  background-color: #2f3131;
  color: #fff;
  width: 100%;
  height: 100%;
}
.bcast-details .wrap {
  padding: 15px;
}


.boxed .head {
  background-color: #fff;
  padding: 18px 20px;
}
.boxed .head,
.modal-header,
#pmore-window .nav-tabs>li.active>a {
  -webkit-border-top-left-radius: 4px;
  -webkit-border-top-right-radius: 4px;
  -moz-border-radius-topleft: 4px;
  -moz-border-radius-topright: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}
.cyan {
  color: #00ba8b!important;
}
.sep {
  background: url('/images/broadcast/default/bg-sep.jpg') repeat-x;
  height: 9px;
  margin: 25px 0;
}
.orange {
  color: #ff8649!important;
}
.nomg {
  margin: 0!important;
}
.spaceht {
  padding-top: 60px!important;
  padding-bottom: 60px!important;
}

/* JCA - to center images */

#ad1, #ad2, #ad3, #ad4, #ad5 {
    display:block;
    margin: auto auto;
    width: 100%;
    height: 100%;
}

.terminal {font-family: 'ralewaysemibold';}


/*maintain padding on boxes*/
#broadcast .broadcast .numbers {
    background-color: #e7e7e7; /* @CSD 04222015 */
    font-family: 'ralewaybold';
    text-align: center;
    margin: 1px;
    padding: 65px 15px;
    overflow: hidden;
}

/*RBM broadcast screens font sizes*/
body#broadcast .container-fluid { height: 100%; }
body#broadcast .numbers { width:99.4%; height:100%; min-height:100%;}
/* Fix broadcast lineheight
body#broadcast .terminal { line-height:90px; margin-bottom:0; color: #fff; }*/
body#broadcast .terminal {
    line-height:35px;

    overflow: hidden;

    height: 2.4em;
    margin-bottom:20px;
    margin-top: 20px;
    color: #fff; }
.numbers p { color: #333; }
.numbers h1 { font-family:'ralewaysemibold'; color: #fff; width:100%; margin-top:60px; letter-spacing:-4px; }
#broadcast .broadcast .numbers.t h1 { color: #333; }

/*heights on each screen*/
.onenum .numbers { height:90vh!important; }
.fournums .numbers { height:42vh!important; padding: 35px 15px!important; }
.sixnums .numbers { height:42vh!important; padding: 35px 15px!important; }
.ads-onenum .numbers { height:90vh!important; }
.ads-fournums .numbers { height:41vh!important; padding: 35px 15px!important; }
.ads-sixnums .numbers, .ads-sixnums .qrwrap { height:39vh!important; padding: 25px 15px!important;}

/*terminal names*/
.onenum .terminal { font-size: 4.5vmin; }
.fournums .terminal { font-size:5.5vmin;}
.broadcast .fournums .numbers p { padding-top: 5px; line-height: 45px!important;}
.sixnums .terminal { font-size:4.5vmin; }
/*.ads-onenum .terminal { font-size:6vmin; }*/
.ads-fournums .terminal { font-size:4.5vmin; }
.ads-sixnums .terminal { font-size:3vmin; }

/*font sizes*/
.onenum h1 { font-size: 280px; line-height: 320px; }
.fournums h1 { font-size: 22vmin; margin-top: -40px!important; }
.sixnums h1 { font-size: 18vmin; margin-top: -10px!important; }
.sixnums .terminal { margin-top:0!important; margin-bottom: 0!important; line-height: 42px!important; height: 2em!important;}
.ads-onenum h1 { font-size: 20vmin; }
.ads-fournums h1 { font-size: 17vmin; margin-top: 0px!important; }
.ads-sixnums h1 { font-size: 12vmin; margin-top: 0px!important; }

/*qr code title fontsize*/
.onenum .qrwrap p { font-size: 30px!important; margin-bottom: 40px!important; }
.onenum .qrwrap img {width: 300px;}
.onenum p.orange { padding-top:65px; font-size:8.5vmin!important; }
.fournums p.orange { padding-top:35px; font-size:4vmin!important; }
.sixnums p.orange { padding-top:35px; font-size:4vmin!important; }
.ads-onenum p.orange { padding-top:65px; font-size:4vmin!important; }
.ads-fournums p.orange { padding-top:38px; font-size:3.5vmin!important; }
.ads-sixnums p.orange { padding-top:10px; font-size:3vmin!important; }

/*
::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
}
::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(0,0,0,.5);
    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}*/

.ticker {
    position: fixed;
    z-index: 9999;
    bottom: 0px;
    width: 100%;
    background: rgba(255, 255, 255, 0.95);
}

.ticker div {
    font-size: 36px;
    font-family: ArialMTStd-ExtraBold;
    color: #333338;
    margin-bottom: 0px;
}

.ads-sixnums  .numbers.t h1,
.ads-fournums  .numbers.t h1,
.ads-onenum  .numbers.t h1 {
    padding-top: 0!important;
}
#broadcast .boxed .head {
    border-radius: 0!important;
}
#broadcast .body.broadcast .ads-onenum .terminal {
    /*line-height: 48px!important; removed by rodel 825*/
    font-size: 4.4vmin;
}

#broadcast .body.broadcast .ads-onenum .numbers {
    height: 46vh!important;
    padding: 20px;
}
#broadcast .body.broadcast .ads-onenum h1 {
    /*font-size: 24vmin!important;*/
    /* removed by rodel 825 margin-top: 20px!important;*/
}
/*rodels broadcast fix 8-26*/
.ads-sixnums .terminal {
    line-height: 33px!important;
    font-size: 2.6vmin!important;
    height: 2.8em!important;
}

